--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,10 @@
         "laravel/sanctum": "^2.11",
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
-        "laravolt/indonesia": "^0.30.0",
+        "laravolt/indonesia": "^0.31.0",
         "mews/captcha": "^3.2",
+        "midtrans/midtrans-php": "^2.5",
+        "swiftmailer/swiftmailer": "^6.0",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
